2005-01-07  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/gplt_x11.c (record):  Incorrect nesting of parentheses.

2006-01-02  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm (PNG_options): Change default animation mode to 
	"nooptimize".  Disable optimization if the background is transparent,
	as this combination is not handled well by most viewing programs.

2006-01-02  Dennis Linse <djlinse37@yahoo.com>

	* term/x11.trm: Remove redundant #include <sys/select.h>

2005-12-30  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm (PNG_options): Initialize and report animate {nooptimize}
	flag in terminal options string.

2005-12-29  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm term/vgagl.trm:  Cleanup (#undef) definition of Y(coord)
	before leaving driver code.

	* term/pdf.trm:  Correct signedness problem in call to PDF_open_image().

	* term/svg.trm: Increase the internal resolution of terminal coordinates
	by adding a scale factor SVG_SCALE. This fixes the "wavy line" bug seen
	in svg plots.

2005-12-29  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/gd.trm: New routine image_do_crop(), extracted from png_text().
	Now shared for cropping all png/gif/jpeg images.

2005-12-26  Ethan Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (place_label3d):  Let write_label handle clipping to
	the page, rather than duplicating it in place_label3d.

2005-12-21  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm (PNG_text): Work around unexpected behaviour in libgd,
	which does not copy transparent pixels during a copy operation.
	Fixes bug #1386553.

2005-12-17  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgraph.c (drawgraph): Fixed "splot x with line palette lw 10".

2005-12-17  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/version.c: Changed value of gnuplot_date[] from a useless 
	July 2004 day into "December 2005".

	* src/mouse.h src/mouse.c: Added new field was_splot_map in structure